# MarlinTrkProcessors

./: .clang-format  AUTHORS  CHANGELOG.md  CMakeLists.txt  README  README.md
.github/workflows/: coverity.yml  key4hep.yml
doc/: CMakeLists.txt  ReleaseNotes.md
source/Digitisers/include/: DDPlanarDigiProcessor.h  DDSpacePointBuilder.h  DDTPCDigiProcessor.h  PlanarDigiProcessor.h  SimpleCylinderDigiProcessor.h  SimpleDiscDigiProcessor.h  SimplePlanarDigiProcessor.h  SimplePlanarTestDigiProcessor.h  SpacePointBuilder.h
source/Digitisers/src/: DDPlanarDigiProcessor.cc  DDSpacePointBuilder.cc  DDTPCDigiProcessor.cc  FixedPadSizeDiskLayout.cc  FixedPadSizeDiskLayout.h  PlanarDigiProcessor.cc  SimpleCylinderDigiProcessor.cc  SimpleDiscDigiProcessor.cc  SimplePlanarDigiProcessor.cc  SimplePlanarTestDigiProcessor.cc  SpacePointBuilder.cc  TPCModularEndplate.cc  TPCModularEndplate.h  voxel.cc  voxel.h
source/GearExtentions/include/: MeasurementSurface.h
source/GearExtentions/src/: MeasurementSurface.cc
source/Refitting/include/: CellsAutomatonMV.h  ClonesAndSplitTracksFinder.h  DDCellsAutomatonMV.h  ExtrToSIT.h  ExtrToTracker.h  FPCCDFullLDCTracking_MarlinTrk.h  FPCCDSiliconTracking_MarlinTrk.h  FullLDCTracking_MarlinTrk.h  LinkDef.h  MCPMap.h  MyBranch_TestTriplet.h  RefitFinal.h  RefitProcessor.h  SiliconTracking_MarlinTrk.h  SiliconTracking_cplusplus.h  SiliconTracking_kaltest.h  TrackSubsetProcessor.h  TruthTrackFinder.h  TruthTracker.h  fpcompare.h
source/Refitting/src/: CellsAutomatonMV.cc  ClonesAndSplitTracksFinder.cc  DDCellsAutomatonMV.cc  ExtrToSIT.cc  ExtrToTracker.cc  FPCCDFullLDCTracking_MarlinTrk.cc  FPCCDSiliconTracking_MarlinTrk.cc  FullLDCTracking_MarlinTrk.cc  GetPurity.h  RefitFinal.cc  RefitProcessor.cc  SiliconTracking_MarlinTrk.cc  SiliconTracking_cplusplus.cc  SiliconTracking_kaltest.cc  TrackSubsetProcessor.cc  TruthTrackFinder.cc  TruthTracker.cc
source/Utils/: README.md
source/Utils/include/: CalcTrackerHitResiduals.h  ClicEfficiencyCalculator.h  FilterConeHits.h  FilterDoubleLayerHits.h  FilterTimeHits.h  FilterTracks.h  HitsSorterAndDebugger.h  SetTrackerHitExtensions.h  SplitCollectionByLayer.h  SplitCollectionByPolarAngle.h
source/Utils/src/: CalcTrackerHitResiduals.cc  ClicEfficiencyCalculator.cc  FilterConeHits.cc  FilterDoubleLayerHits.cc  FilterTimeHits.cc  FilterTracks.cc  SetTrackerHitExtensions.cc  SplitCollectionByLayer.cc  SplitCollectionByPolarAngle.cc
source/ftf/: FTF_parameters.txt  FTF_steer.xml
source/ftf/include/: Hit.h  ThreeDPoint.h  Track.h  TrackFinder.h  TrackFinderFTF.h  TrackFindingParameters.h  TrackUtil.h
source/ftf/src/: Hit.cc  Track.cc  TrackFinder.cc  TrackFinderFTF.cc  TrackFindingParameters.cc  TrackUtil.cc
